[project]
name = "network-switch-analysis"
version = "0.1.0"
description = "A review of commercially available network switches as of early 2026"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
]
